--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "*"
+    "typescript": "5.1.3"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
