--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "i": "^0.3.7",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "5.1.3"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
