--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "midul",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "yarn lint-prettier"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -37,6 +40,7 @@
     "dotenv": "^16.1.4",
     "eslint": "^8.0.1",
     "express": "^4.18.2",
+    "lint-staged": "^13.2.2",
     "mongoose": "^7.2.4"
   }
 }
